--- a/src/views/diaryItems/DiaryItems.scss
+++ b/src/views/diaryItems/DiaryItems.scss
@@ -6,7 +6,7 @@
   gap: 10px;
   width: 100%;
   overflow-y: auto;
-  height: calc(100vh - 200px);
+  height: calc(100vh - 300px);
 }
 
 .action-filters {
